# livesplit-python

./: .gitignore  LICENSE  README.md  setup.cfg
src/livesplit/: __init__.py  client.py  livesplit.py
