[metadata]
name = livesplit
version = 1.0
author = Vallerie Knight
author_email = val@valknight.xyz
description = A library to communicate with LiveSplit server from python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/valknight/livesplit-python
project_urls =
    Bug Tracker = https://github.com/valknight/livesplit-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src